// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AiInfoButton > renders the button with tooltip 1`] = `
<button
  aria-describedby="«r0»"
  aria-label="Info button"
  class="ds:cursor-pointer"
>
  <svg
    fill="currentColor"
    height="32"
    id="exDjUeXnA011"
    shape-rendering="geometricPrecision"
    stroke="currentColor"
    stroke-width="0"
    text-rendering="geometricPrecision"
    viewBox="0 0 24 24"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <lineargradient
        gradientTransform="translate(0 0)"
        gradientUnits="objectBoundingBox"
        id="exDjUeXnA013-fill"
        spreadMethod="pad"
        x1="0"
        x2="1"
        y1="0.5"
        y2="0.5"
      >
        <stop
          id="exDjUeXnA013-fill-0"
          offset="0%"
          stop-color="#6e6e6e"
        />
        <stop
          id="exDjUeXnA013-fill-1"
          offset="100%"
          stop-color="#6e6e6e"
        />
      </lineargradient>
    </defs>
    <circle
      fill="url(#exDjUeXnA013-fill)"
      id="exDjUeXnA013"
      r="7.93"
      transform="matrix(.707107-.707107 0.707107 0.707107 12.000563 12)"
    />
    <polygon
      fill="#fff"
      id="exDjUeXnA014"
      points="13.54,13.54 12,17.69 10.46,13.54 6.31,12 10.46,10.46 12,6.31 13.54,10.46 17.69,12 13.54,13.54"
      transform="matrix(-.01 0 0-.01 9.12 13.12)"
    />
    <polygon
      fill="#fff"
      id="exDjUeXnA015"
      points="13.54,13.54 12,17.69 10.46,13.54 6.31,12 10.46,10.46 12,6.31 13.54,10.46 17.69,12 13.54,13.54"
      transform="matrix(-.01 0 0-.01 14.12 14.12)"
    />
    <polygon
      fill="#fff"
      id="exDjUeXnA016"
      points="13.54,13.54 12,17.69 10.46,13.54 6.31,12 10.46,10.46 12,6.31 13.54,10.46 17.69,12 13.54,13.54"
      transform="matrix(-.01 0 0-.01 13.40162 8.553925)"
    />
    <polygon
      fill="#fff"
      id="exDjUeXnA017"
      points="13.54,13.54 12,17.69 10.46,13.54 6.31,12 10.46,10.46 12,6.31 13.54,10.46 17.69,12 13.54,13.54"
    />
  </svg>
</button>
`;

exports[`AiInfoButton > renders the icon only 1`] = `
<svg
  fill="currentColor"
  height="32"
  id="exDjUeXnA011"
  shape-rendering="geometricPrecision"
  stroke="currentColor"
  stroke-width="0"
  text-rendering="geometricPrecision"
  viewBox="0 0 24 24"
  width="32"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <defs>
    <lineargradient
      gradientTransform="translate(0 0)"
      gradientUnits="objectBoundingBox"
      id="exDjUeXnA013-fill"
      spreadMethod="pad"
      x1="0"
      x2="1"
      y1="0.5"
      y2="0.5"
    >
      <stop
        id="exDjUeXnA013-fill-0"
        offset="0%"
        stop-color="#6e6e6e"
      />
      <stop
        id="exDjUeXnA013-fill-1"
        offset="100%"
        stop-color="#6e6e6e"
      />
    </lineargradient>
  </defs>
  <circle
    fill="url(#exDjUeXnA013-fill)"
    id="exDjUeXnA013"
    r="7.93"
    transform="matrix(.707107-.707107 0.707107 0.707107 12.000563 12)"
  />
  <polygon
    fill="#fff"
    id="exDjUeXnA014"
    points="13.54,13.54 12,17.69 10.46,13.54 6.31,12 10.46,10.46 12,6.31 13.54,10.46 17.69,12 13.54,13.54"
    transform="matrix(-.01 0 0-.01 9.12 13.12)"
  />
  <polygon
    fill="#fff"
    id="exDjUeXnA015"
    points="13.54,13.54 12,17.69 10.46,13.54 6.31,12 10.46,10.46 12,6.31 13.54,10.46 17.69,12 13.54,13.54"
    transform="matrix(-.01 0 0-.01 14.12 14.12)"
  />
  <polygon
    fill="#fff"
    id="exDjUeXnA016"
    points="13.54,13.54 12,17.69 10.46,13.54 6.31,12 10.46,10.46 12,6.31 13.54,10.46 17.69,12 13.54,13.54"
    transform="matrix(-.01 0 0-.01 13.40162 8.553925)"
  />
  <polygon
    fill="#fff"
    id="exDjUeXnA017"
    points="13.54,13.54 12,17.69 10.46,13.54 6.31,12 10.46,10.46 12,6.31 13.54,10.46 17.69,12 13.54,13.54"
  />
</svg>
`;
